# kylin_point_cpp

./: .eosproj  .gitignore  CMakeLists.txt  README.md  UnitTestsExternalProject.txt  auto.sh  boot_process.md  create_account.sh  randon.sh  smart_account_creator.abi
hello/: CMakeLists.txt
hello/abi/: hello.abi
hello/src/: hello.cpp
klp.connector/: CMakeLists.txt
klp.connector/abi/: klp.connector.abi
klp.connector/include/klp.connector/: eosio.token.hpp  exchange_state.hpp  klp.connector.hpp
klp.connector/src/: klp.connector.cpp
klp.token/: CMakeLists.txt  README.md
klp.token/abi/: klp.token.abi
klp.token/include/klp.token/: klp.token.hpp
klp.token/src/: klp.token.cpp
tests/: CMakeLists.txt  contracts.hpp.in  klp.connector_tests.cpp  klp.token_tests.cpp  main.cpp
